<?xml version="1.0"?>
<package>
  <name>manager_api</name>
  <version>0.0.0</version>
  <description>The manager_api package</description>

  <maintainer email="kamila.lis@outlook.com">kl</maintainer>

  <license>TODO</license>

  <build_depend>diagnostic_msgs</build_depend>
  <run_depend>diagnostic_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
