<?xml version="1.0"?>
<package>
  <name>manager_api</name>
  <version>0.0.0</version>
  <description>The manager_api package</description>
  <maintainer email="kamila.lis@outlook.com">kl</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>diagnostic_msgs</build_depend>
  <run_depend>diagnostic_msgs</run_depend>

</package>
